# pg-graphql

./: .env  .gitignore  Cargo.toml  Dockerfile  sample.env
api/: Cargo.toml
api/src/: conn.rs  lib.rs  ws.rs
api/src/engine/: mod.rs
api/src/engine/ws/: mod.rs  native.rs  wasm.rs
api/src/method/: authenticate.rs  listen.rs  login.rs  mod.rs  query.rs
api/src/opt/: endpoint.rs  mod.rs
org_data/: 001_division.sql  001_fixture.sql  002_category.sql  003_category_option_brand.sql  004_category_option_category.sql  005_category_option_sub_category.sql  006_category_option_special_sub_category.sql  006_pre_account.sql  007_sub_account.sql  007_unit.sql  007_vendor_account.sql  008_post_vendor_account.sql  008_pre_inventory.sql  1111_import_info.txt  1111_notes.txt
org_init_scripts/: 000_common.sql  002_account_type.sql  003_permission.sql  004_country.sql  006_tds_deductee_type.sql  007_category.sql  008_organization.sql  009_warehouse.sql  010_member.sql  011_approval_tag.sql  012_tds_nature_of_payment.sql  013_bank.sql  014_bank_beneficiary.sql  015_doctor.sql  016_stock_location.sql  017_display_rack.sql  018_tag.sql  019_manufacturer.sql  020_pharma_salt.sql  021_sale_incharge.sql  021_sales_person.sql  022_price_list.sql  023_print_template.sql  024_gst_registration.sql  025_account.sql  025_account_daily_summary.sql  026_account.sql  026_customer.sql  027_branch.sql  028_vendor.sql  029_stock_value.sql  030_offer_management.sql  031_transport.sql  032_pos_server.sql  033_desktop_client.sql  033_device.sql  034_unit.sql  035_category_option.sql  036_division.sql  037_gift_coupon.sql  (+113 more)
org_secure_scripts/: 001_pre_setup.sql  002_authenticate_login.sql  002_common_funs.sql  003_setup.sql  004_post_setup.sql  005_finalize_setup.sql  100_finalize_setup.sql
scripts/: 000_common.sql  001_gst_tax.sql  002_account_type.sql  005_uqc.sql  007_category.sql  008_organization.sql  009_warehouse.sql  010_member.sql  011_approval_tag.sql  012_tds_nature_of_payment.sql  013_bank.sql  014_bank_beneficiary.sql  015_doctor.sql  016_stock_location.sql  017_display_rack.sql  018_tag.sql  019_manufacturer.sql  020_pharma_salt.sql  021_sales_person.sql  022_price_list.sql  023_print_template.sql  024_gst_registration.sql  026_account.sql  027_branch.sql  030_offer_management.sql  032_pos_server.sql  033_device.sql  034_unit.sql  035_category_option.sql  036_division.sql  037_gift_coupon.sql  038_pos_counter.sql  039_voucher_type.sql  040_inventory.sql  041_inventory_branch_detail.sql  043_financial_year.sql  044_voucher_numbering.sql  045_batch.sql  047_bill_allocation.sql  048_acc_cat_txn.sql  (+62 more)
src/: app_settings.rs  auth.rs  connection.rs  context.rs  env.rs  extractor.rs  failure.rs  graphql.rs  main.rs  organization.rs  server.rs  session.rs  shutdown.rs  sql.rs  util.rs  utils.rs
src/cdc/: action.rs  mod.rs
src/db/: mod.rs  session.rs
src/handler/: mod.rs  organization.rs
src/handler/rpc/: connection.rs  mod.rs
src/rpc/: connection.rs  constants.rs  mod.rs  session.rs
src/server/: connection.rs  constants.rs  mod.rs  rpc.rs  session.rs  shutdown.rs
src/sql/: custom.rs  mod.rs  value.rs
tenant/: Cargo.toml
tenant/src/: failure.rs  init.rs  lib.rs  notification.rs  rpc.rs  script.rs  value.rs
tenant/src/cdc/: action.rs  mod.rs  watch.rs
tenant/src/init/: mod.rs  script.rs
tests/: db.rs  init.rs  test.sql
tests/common/: login.rs  mod.rs
