[package]
name = "pg_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
async-graphql = { version = "7.0.3", default-features = false, features = ["graphiql"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
async-graphql-axum = "7.0.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.115"
async-trait = "0.1.79"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
tower-http = { version = "0.5.2", features = ["cors"] }
regex = "1.10.4"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
lazy_static = { version = "1.4.0" }
chrono = { version = "0.4.38", features = ["serde"] }