[package]
name = "pg_graph"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "api","tenant"]

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time", "signal"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.115"
async-trait = "0.1.79"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
tower-http = { version = "0.5.2", features = ["cors", "request-id"] }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }
tokio-util = "0.7.11"
oneshot = "0.1.8"
tower = "0.4.13"
futures = "0.3.30"
bytes = "1.6.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
axum-server = "0.6.0"
anyhow = "1.0.86"
channel = { version = "1.9.0", package = "async-channel" }
once_cell = "1.19.0"
futures-util = "0.3.30"
tracing = "0.1.40"
tenant = { path = "./tenant" }
