[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.23.1"
tenant = { path = "./../tenant" }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "sync"] }
serde = { version = "1.0.203", features = ["derive"] }
futures = "0.3.30"
flume = "0.11.0"
indexmap = "2.2.6"