[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.23.1", features = ["rustls"] }
tenant = { path = "./../tenant" }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "sync"] }
serde = { version = "1.0.203", features = ["derive"] }
futures = "0.3.30"
flume = "0.11.0"
indexmap = "2.2.6"
url = "2.5.2"
anyhow = "1.0.86"
serde_json = "1.0.120"
channel = { version = "1.9.0", package = "async-channel" }
trice = "0.4.0"
futures-concurrency = "7.6.1"
uuid = { version = "1.9.1", features = ["v4", "fast-rng"] }