[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tenant = { path = "./../tenant" }
serde = { version = "1.0.203", features = ["derive"] }
futures = "0.3.30"
path-clean = "1.0.1"
indexmap = "2.2.6"
url = "2.5.2"
anyhow = "1.0.86"
serde_json = "1.0.120"
channel = { version = "1.9.0", package = "async-channel" }
trice = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
pharos = "0.5.3"
#ring = { version = "0.17.7", features = ["wasm32_unknown_unknown_js"]} 
tokio = { version = "1.38.0", features = ["rt", "sync"] }
uuid = { version = "1.9.1", features = ["v4", "js", "fast-rng"] }
wasm-bindgen-futures = "0.4.42"
wasmtimer = { version = "0.2.0", default-features = false, features = [
    "tokio",
] }
ws_stream_wasm = "0.7.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-tungstenite = { version = "0.23.1", features = ["rustls", "url"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "sync"] }
uuid = { version = "1.9.1", features = ["v4", "fast-rng"] }

