[package]
name = "tenant"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
anyhow = "1.0.86"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time", "signal"] }
lazy_static = "1.4.0"
regex = "1.10.5"
chrono = "0.4.38"
uuid = "1.9.1"
tokio-tungstenite = "0.23.1"
axum = { version = "0.7.5", features = ["ws"] }
channel = { version = "1.9.0", package = "async-channel" }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }
tokio-util = "0.7.11"
futures = "0.3.30"

